--- a/europe/_ines-builder/sysconfig.yaml
+++ b/europe/_ines-builder/sysconfig.yaml
@@ -18,7 +18,7 @@ elec_demand:
         node:
           - [flow_scaling_method,scale_to_annual,[[1]]]
     dynamic:
-      commodity:
+      commodity__region:
         node:
           flow_profile: [flow_profile,[[1]],[population,{}],null,PECD1]
 
@@ -148,6 +148,59 @@ vre:
       technology_type__region:
         set:
           potential: [invest_max_total,[[1]],[area,{}],0.0,{"on": PECD2, "off": OFF3}]
+
+# Hydro systems
+hydro_systems:
+  entities:
+    reservoir__region:
+      node:
+        - [[1,2]]
+    technology__to_commodity__region:
+      unit:
+        - [[1,3]]
+      unit__to_node:
+        - [[1,3],[2,3]]
+    reservoir__to_technology__region:
+      unit: null
+      node__to_unit:
+        - [[1,3],[2,3]]
+    reservoir__to_technology__to_commodity__region:
+      unit_flow__unit_flow:
+        - [[2,4],[3,4],[1,4],[2,4]]
+  parameters:
+    user: null
+    default:
+      technology__to_commodity__region:
+        unit:
+          - [investment_method,not_allowed,[[1,3]]]
+      reservoir__to_technology__region:
+        node__to_unit:
+          - [capacity,1.0,[[1,3],[2,3]]]
+      reservoir__region:
+        node:
+          - [node_type,storage,[[1,2]]]
+          - [storage_limit_method,lower_limit,[[1,2]]]
+          - [flow_scaling_method,use_profile_directly,[[1,2]]]
+          - [storage_investment_method,not_allowed,[[1,2]]]
+          - [storage_capacity,1.0,[[1,2]]]
+    fixed:
+      reservoir__region:
+        node:
+          inflow: [flow_profile,1.0,[[1,2]]]
+          capacity: [storages_existing,1.0,[[1,2]]]
+          minimum_capacity: [storage_state_lower_limit,1.0,[[1,2]]]
+      reservoir__to_technology__region: 
+        unit:
+          maximum_discharge: [units_existing,1.0,[[2,3]]]
+      technology__to_commodity__region:
+        unit__to_node:
+          operational_cost: [other_operational_cost,1.0,[[1,3],[2,3]]]
+          fixed_cost: [fixed_cost,1.0,[[1,3],[2,3]]]
+          profile_fix: [profile_fix,1.0,[[1,3],[2,3]]]
+      reservoir__to_technology__to_commodity__region:
+        unit_flow__unit_flow:
+          efficiency: [equality_ratio,1.0,[[2,4],[3,4],[1,4],[2,4]]]
+
 # power transmission map
 power_transmission:
   entities:
