--- a/europe/_ines-builder/sysconfig.yaml
+++ b/europe/_ines-builder/sysconfig.yaml
@@ -165,7 +165,6 @@ hydro_systems:
       unit__to_node:
         - [[1,3],[2,3]]
     reservoir__to_technology__region:
-      unit: null
       node__to_unit:
         - [[1,3],[2,3]]
     reservoir__to_technology__to_commodity__region:
@@ -177,25 +176,23 @@ hydro_systems:
       technology__to_commodity__region:
         unit:
           - [investment_method,not_allowed,[[1,3]]]
-      reservoir__to_technology__region:
-        node__to_unit:
-          - [capacity,1.0,[[1,3],[2,3]]]
       reservoir__region:
         node:
           - [node_type,storage,[[1,2]]]
           - [storage_limit_method,lower_limit,[[1,2]]]
+          - [storage_state_fix_method,fix_start,[[1,2]]]
           - [flow_scaling_method,use_profile_directly,[[1,2]]]
           - [storage_investment_method,not_allowed,[[1,2]]]
-          - [storage_capacity,1.0,[[1,2]]]
     fixed:
       reservoir__region:
         node:
           inflow: [flow_profile,1.0,[[1,2]]]
-          capacity: [storages_existing,1.0,[[1,2]]]
+          capacity: [storage_capacity,1.0,[[1,2]]]
+          initial_capacity: [storage_state_fix,1.0,[[1,2]]]
           minimum_capacity: [storage_state_lower_limit,1.0,[[1,2]]]
       reservoir__to_technology__region: 
-        unit:
-          maximum_discharge: [units_existing,1.0,[[2,3]]]
+        node__to_unit:
+          maximum_discharge: [capacity,1.0,[[1,3],[2,3]]]
       technology__to_commodity__region:
         unit__to_node:
           operational_cost: [other_operational_cost,1.0,[[1,3],[2,3]]]
