--- a/europe/_ines-builder/sysconfig.yaml
+++ b/europe/_ines-builder/sysconfig.yaml
@@ -341,20 +341,21 @@ gas_sector:
     user:
       technology:
         unit:
-          investment_method: [technology,investment_method,[[1]],[[1]]]
+          investment_method: 
+            - [technology,investment_method,[[1]],[[1]]]
       storage:
         node:
-          storage_investment_method: [storage,investment_method,[[1]],[[1]]]
+          storage_investment_method: 
+            - [storage,investment_method,[[1]],[[1]]]
       storage_connection:
         link:
-          investment_method: [storage,investment_method,[[1]],[[1,2]]]
+          investment_method: 
+            - [storage,investment_method,[[1]],[[1,2]]]
+            - [storage,investment_method,[[1]],[[2,1]]]
     default:
       technology:
         unit: 
           - [retirement_method,economic_retirement,[[1]]]
-      technology__to_commodity:
-        unit__to_node:
-          - [capacity,1.0,[[1],[2]]]
       storage:
         node:
           - [node_type,storage,[[1]]]
@@ -370,6 +371,7 @@ gas_sector:
           lifetime: [lifetime,1.0,[[1]]]
       technology__to_commodity:
         unit__to_node:
+          capacity: [capacity,1.0,[[1],[2]]]
           investment_cost: [investment_cost,1.0,[[1],[2]]]
           fixed_cost: [fixed_cost,1.0,[[1],[2]]]
           operational_cost: [other_operational_cost,1.0,[[1],[2]]]
@@ -401,6 +403,7 @@ gas_sector:
           operational_cost: [other_operational_cost,[[1],[2]],[area,{}],null,PECD1]
       storage__region:
         node:
+          capacity: [storage_capacity,[[1]],[area,{}],null,PECD1]
           storages_existing: [storages_existing,[[1]],[area,{}],null,PECD1]
           potentials: [storages_max_cumulative,[[1]],[area,{}],null,PECD1]
       storage_connection__region:
@@ -415,9 +418,6 @@ gas_sector:
           operational_cost_in: [operational_cost,[[2],[2,1],[1]],[area,{}],null,PECD1]
           operational_cost_out: [operational_cost,[[1],[1,2],[2]],[area,{}],null,PECD1]
           
-# PENDING
-# potentials in dynamic
-
 # gas transmission map
 gas_transmission:
   entities:
@@ -444,3 +444,29 @@ gas_transmission:
           lifetime: [lifetime,1.0,[[1,2,3]]]
           links_existing: [links_existing,1.0,[[1,2,3]]]
           potentials: [links_max_cumulative,1.0,[[1,2,3]]]
+
+# gas pipelines integration
+gas_pipelines:
+  entities:
+    pipeline:
+      link:
+        - [[1,2,3]]
+      node__link__node:
+        - [[2,1],[1,2,3],[2,3]]
+  parameters:
+    user:
+    default:
+      pipeline:
+        link: 
+          - [retirement_method,economic_retirement,[[1,2,3]]]
+          - [investment_method,cumulative_limits,[[1,2,3]]]
+        node__link__node:
+          - [capacity,1.0,[[2,1],[1,2,3],[2,3]]]
+          - [efficiency,1.0,[[2,1],[1,2,3],[2,3]]]
+    fixed:
+      pipeline:
+        link:
+          investment_cost: [investment_cost,1.0,[[1,2,3]]]
+          lifetime: [lifetime,1.0,[[1,2,3]]]
+          links_existing: [links_existing,1.0,[[1,2,3]]]
+          links_potentials: [links_max_cumulative,1.0,[[1,2,3]]]
