upgrading_pipelines_and_transport_to_ines

--- a/userconfig.yaml
+++ b/userconfig.yaml
@@ -346,5 +346,68 @@ technology:
     status: True
     investment_method: "not_allowed"
 
-
-
+vehicle:
+  car:
+    status: True
+  car-diesel:
+    status: True
+  car-gasoline:
+    status: True
+  car-DR:
+    status: True
+  car-H2:
+    status: True
+  car-CNG:
+    status: True
+  car-LNG:
+    status: True
+  car-LPG:
+    status: True
+  van:
+    status: True
+  van-diesel:
+    status: True
+  van-gasoline:
+    status: True
+  van-DR:
+    status: True
+  van-H2:
+    status: True
+  van-CNG:
+    status: True
+  van-LNG:
+    status: True
+  van-LPG:
+    status: True
+  truck:
+    status: True
+  truck-diesel:
+    status: True
+  truck-gasoline:
+    status: True
+  truck-DR:
+    status: True
+  truck-H2:
+    status: True
+  truck-CNG:
+    status: True
+  truck-LNG:
+    status: True
+  truck-LPG:
+    status: True
+  bus:
+    status: True
+  bus-diesel:
+    status: True
+  bus-gasoline:
+    status: True
+  bus-DR:
+    status: True
+  bus-H2:
+    status: True
+  bus-CNG:
+    status: True
+  bus-LNG:
+    status: True
+  bus-LPG:
+    status: True
