--- a/europe/_ines-builder/sysconfig.yaml
+++ b/europe/_ines-builder/sysconfig.yaml
@@ -454,7 +454,7 @@ gas_pipelines:
       node__link__node:
         - [[2,1],[1,2,3],[2,3]]
   parameters:
-    user:
+    user: null
     default:
       pipeline:
         link: 
@@ -469,4 +469,37 @@ gas_pipelines:
           lifetime: [lifetime,1.0,[[1,2,3]]]
           links_existing: [links_existing,1.0,[[1,2,3]]]
           capacity: [capacity,1.0,[[1,2,3]]]
-          links_potentials: [links_max_cumulative,1.0,[[1,2,3]]]
+          potentials: [links_max_cumulative,1.0,[[1,2,3]]]
+
+#transport integration
+gas_pipelines:
+  entities:
+    commodity__vehicle__region:
+      node:
+        - [[[1,3]],{}]
+        - [[[2,3]],{}]
+      link:
+        - [[[1,2,3]],{}]
+      node__link__node:
+        - [[[1,3],[1,2,3],[2,3]],{}]
+        - [[[2,3],[1,2,3],[1,3]],{node_type: storage}]
+  parameters:
+    user: null
+    default:
+      node:
+        - [storage_limit_method,upper_limit,[[2,3]],{node_type: storage}]
+    fixed:
+      commodity__vehicle__region:
+        node:
+          node_type: [node_type,1.0,[[2,3]]]
+          connected_vehicles: [storage_state_upper_limit,1.0,[[2,3]]]
+          energy_max: [storage_capacity,1.0,[[2,3]]]
+          flow_profile: [flow_profile,1.0,[[2,3]]]
+          scale_demand: [flow_annual,1.0,[[2,3]]]
+        link:
+          connected_vehicles: [availability,1.0,[[1,2,3]]]
+        node__link__node:
+          efficiency_in: [efficiency,1.0,[[1,3],[1,2,3],[2,3]]]
+          capacity_in: [capacity,1.0,[[1,3],[1,2,3],[2,3]]]
+          efficiency_out: [efficiency,1.0,[[2,3],[1,2,3],[1,3]]]
+          capacity_out: [capacity,1.0,[[2,3],[1,2,3],[1,3]]]
